--- a/Gallotia_bravoana_res.html
+++ b/Gallotia_bravoana_res.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="par">
-  <h4>COMPLETE = 2.4; MRE =    0.418; SMSE =    0.318 </h4>
+  <h4>COMPLETE = 2.4; MRE =    0.036; SMSE =    0.036 </h4>
   </div>
 
   <p class="clear"></p>
@@ -53,26 +53,26 @@
   <h2>Data & predictions</h2>
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
-    <TR><TD> 60</TD> <TD>146.5</TD> <TD>1.442</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1050</TD> <TD>348.2</TD> <TD>0.6684</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>3990</TD> <TD>4765</TD> <TD>0.1941</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>5.5</TD> <TD>5.153</TD> <TD>0.06309</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>13.1</TD> <TD>9.933</TD> <TD>0.2417</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
-    <TR><TD>13.5</TD> <TD>18.17</TD> <TD>0.3462</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD>15.5</TD> <TD>23.54</TD> <TD>0.5188</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
-    <TR><TD> 19</TD> <TD>20.55</TD> <TD>0.08163</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD>  6</TD> <TD>3.173</TD> <TD>0.4711</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
-    <TR><TD>3.5</TD> <TD>2.564</TD> <TD>0.2676</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
-    <TR><TD>159.2</TD> <TD>244.4</TD> <TD>0.5353</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
-    <TR><TD>210.5</TD> <TD>152</TD> <TD>0.278</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
-    <TR><TD>0.01918</TD> <TD>0.01291</TD> <TD>0.3266</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
-    <TR class="psd"><TD>0.02</TD> <TD>0.01886</TD> <TD>0.05706</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.9369</TD> <TD>0.1712</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD> 60</TD> <TD>63.42</TD> <TD>0.05702</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
+    <TR><TD>1050</TD> <TD>1058</TD> <TD>0.007464</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>3990</TD> <TD>3990</TD> <TD>3.035e-09</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>5.5</TD> <TD>5.019</TD> <TD>0.0874</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>13.1</TD> <TD>13.01</TD> <TD>0.006537</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD>13.5</TD> <TD>13.5</TD> <TD>1.111e-08</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
+    <TR><TD>15.5</TD> <TD>17.05</TD> <TD>0.1002</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD> 19</TD> <TD>19.05</TD> <TD>0.002614</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
+    <TR><TD>  6</TD> <TD>5.732</TD> <TD>0.04474</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
+    <TR><TD>3.5</TD> <TD>3.757</TD> <TD>0.07346</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD>159.2</TD> <TD>147.3</TD> <TD>0.07449</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
+    <TR><TD>210.5</TD> <TD>210.2</TD> <TD>0.001622</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
+    <TR><TD>0.01918</TD> <TD>0.01939</TD> <TD>0.01102</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR class="psd"><TD>0.02</TD> <TD>0.07472</TD> <TD>2.736</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.7545</TD> <TD>0.05688</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
     <TR class="psd"><TD>0.95</TD> <TD>0.95</TD> <TD>  0</TD> <TD>psd.kap_R</TD> <TD>-</TD> <TD>reproduction efficiency</TD></TR>
-    <TR class="psd"><TD> 18</TD> <TD>26.37</TD> <TD>0.4652</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
-    <TR class="psd"><TD>0.002</TD> <TD>0.0005285</TD> <TD>0.7357</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.8036</TD> <TD>0.004517</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.1565</TD> <TD>0.4783</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD> 18</TD> <TD>19.61</TD> <TD>0.08948</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
+    <TR class="psd"><TD>0.002</TD> <TD>0.000758</TD> <TD>0.621</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.7988</TD> <TD>0.001549</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
+    <TR class="psd"><TD>0.3</TD> <TD>0.3037</TD> <TD>0.01231</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
   </TABLE>
   </div>
 
@@ -82,25 +82,25 @@
     <TR class="head"><TH>symbol</TH> <TH>units</TH> <TH>value</TH>  <TH>free</TH> <TH>description</TH> </TR>
     <TR><TD>T_ref</TD> <TD>K</TD> <TD>293.1</TD> <TD>0</TD> <TD>Reference temperature</TD></TR>
     <TR><TD>T_A</TD> <TD>K</TD> <TD>8000</TD> <TD>0</TD> <TD>Arrhenius temperature</TD></TR>
-    <TR><TD>z</TD> <TD>-</TD> <TD>4.912</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
+    <TR><TD>z</TD> <TD>-</TD> <TD>4.907</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
     <TR><TD>F_m</TD> <TD>l/d.cm^2</TD> <TD>6.5</TD> <TD>0</TD> <TD>{F_m}, max spec searching rate</TD></TR>
     <TR><TD>kap_X</TD> <TD>-</TD> <TD>0.8</TD> <TD>0</TD> <TD>digestion efficiency of food to reserve</TD></TR>
     <TR><TD>kap_P</TD> <TD>-</TD> <TD>0.1</TD> <TD>0</TD> <TD>faecation efficiency of food to faeces</TD></TR>
-    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.01886</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
-    <TR><TD>kap</TD> <TD>-</TD> <TD>0.9369</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.07472</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
+    <TR><TD>kap</TD> <TD>-</TD> <TD>0.7545</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
     <TR><TD>kap_R</TD> <TD>-</TD> <TD>0.95</TD> <TD>0</TD> <TD>reproduction efficiency</TD></TR>
-    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>26.37</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
+    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>19.61</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
     <TR><TD>p_T</TD> <TD>J/d.cm^2</TD> <TD>  0</TD> <TD>0</TD> <TD>{p_T}, surf-spec somatic maint</TD></TR>
-    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0005285</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7810</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
-    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>779.5</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
-    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>7854</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
-    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>3.415e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
+    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.000758</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7857</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
+    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>8215</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
+    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>2.566e+05</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
+    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>1.464e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
     <TR><TD>s_G</TD> <TD>-</TD> <TD>0.0001</TD> <TD>0</TD> <TD>Gompertz stress coefficient</TD></TR>
-    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>1.593e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
-    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2087</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
+    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>1.926e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
+    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2877</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
     <TR><TD>f</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for 0-var data</TD></TR>
-    <TR><TD>z_m</TD> <TD>-</TD> <TD>4.288</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
+    <TR><TD>z_m</TD> <TD>-</TD> <TD>5.481</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
   </TABLE>
   </div>
 
